dev-allow-alternative-tools-when-uploading-raster-data: Updated the `Option` class so that it can be de-serialised from empty strings `""` and empty objects `{}`.