@@ -1,6 +1,5 @@
 package com.cmclinnovations.stack.clients.core;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
@@ -9,8 +8,13 @@ public class Option {
     private List<String> optionList;
 
     @JsonCreator
+    public Option() {
+        this.optionList = List.of();
+    }
+
+    @JsonCreator
     public Option(String option) {
-        this.optionList = Arrays.asList(option);
+        this.optionList = option.isEmpty() ? List.of() : List.of(option);
     }
 
     @JsonCreator
